# timefuse-server

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DEVEL-WINDOWS.txt  LICENSE  README.md  timefuse-server.pro
src/: TcpThread.cpp  TcpThread.hpp  accept_friend.sql  add_friend.sql  add_group.sql  add_personal_event.sql  add_to_group.sql  client_connection.cpp  client_connection.hpp  delete_friend.sql  event_struct.cpp  event_struct.hpp  get_friend_requests.sql  get_friends.sql  list_groups.sql  main.cpp  master.cpp  master.hpp  master_node.cpp  master_node.hpp  remove_from_group.sql  remove_group.sql  slave.hpp  tables.sql  tcp_comm.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_thread.cpp  tcp_thread.hpp  tcp_timer.cpp  tcp_timer.hpp  thread_init_exception.hpp  user.cpp  user.hpp  worker.hpp  worker_connection.cpp  worker_connection.hpp  worker_connection_state.hpp  worker_node.cpp  worker_node.hpp
test/: test_client_requests.pro  test_sql_queries.pro  testclientrequests.cpp  testsqlqueries.cpp
